# truetop

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
bench/: BENCHMARKS.md  Cargo.toml
bench/benches/: scaling.rs
bench/macro/: plot.py  run.sh
bench/src/: lib.rs
truetop/: Cargo.toml  build.rs
truetop-common/: Cargo.toml
truetop-common/src/: lib.rs
truetop-ebpf/: Cargo.toml
truetop-ebpf/src/: comm.rs  cpu.rs  lifecycle.rs  main.rs  task.rs
truetop/src/: backend.rs  batch.rs  btf.rs  main.rs  metrics.rs  ui.rs
