[workspace]
resolver = "2"
members = [
    "truetop",
    "truetop-common",
    "truetop-ebpf",
    "bench",
]
default-members = ["truetop", "truetop-common", "bench"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.10", default-features = false }
# libc 1.0 is still a pre-release as of 2026-06; stay on the stable 0.2 line.
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.33", default-features = false }
tokio = { version = "1.52.3", default-features = false }
which = { version = "8.0.4", default-features = false }

[profile.release.package.truetop-ebpf]
debug = 2
codegen-units = 1
strip = false
