[package]
name = "truetop-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "scaling"
harness = false
